--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name</title>
+  <title>LIU Lingwen</title>
   <meta name="description" content="Academic homepage of Your Name." />
 
   <style>
