Update affiliation in index.html

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <div>
           <h1 class="name">Your Name</h1>
           <p class="affil">
-            Ph.D. Student / Researcher, Your Lab, Your University
+            Ph.D. Student / Researcher, Image Media Lab, Waseda University
           </p>
           <p class="bio">
             I work on <b>Magnetic Particle Imaging (MPI)</b>, with interests in
