--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <section id="home">
       <div class="hero">
         <!-- Replace with your photo -->
-        <img class="avatar" src="photo.jpg" alt="Your photo" />
+        <img class="avatar" src="selfphoto.jpg" alt="Your photo" />
 
         <div>
           <h1 class="name">Your Name</h1>
