Update name in index.html to 'LIU Lingwen'

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <img class="avatar" src="selfphoto.jpg" alt="Your photo" />
 
         <div>
-          <h1 class="name">Your Name</h1>
+          <h1 class="name">LIU Lingwen</h1>
           <p class="affil">
             Ph.D. Student / Researcher, Image Media Lab, Waseda University
           </p>
