Add publication details for 2025 conference

--- a/index.html
+++ b/index.html
@@ -221,6 +221,29 @@
       <div class="pub">
         <div>
           <div class="pub-title">
+            Structure-aware Self-supervised Graph Representation Learning
+          </div>
+          <div class="pub-authors">
+            L Liu, P Cao, G Wen, Z Jia, J Yang, W Li, OR Zaiane
+          </div>
+          <div class="pub-venue">
+            International Conference on Database Systems for Advanced Applications, 2025
+          </div>
+          <div class="pub-links">
+            <a href="https://dasfaa2025.github.io/paper/research/research_431_paper.pdf/">Paper</a> 
+            <!-- <span>|</span>
+            <a href="#">Supplement</a> <span>|</span>
+            <a href="#">BibTeX</a> -->
+          </div>
+        </div>
+        <div class="meta-right">
+          <div class="year">2025</div>
+        </div>
+      </div>
+      
+      <div class="pub">
+        <div>
+          <div class="pub-title">
             BrainOSM: Outlier screening for multi-view functional brain network analysis
             <!-- <span class="badge">New</span> -->
           </div>
