--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             L Liu, P Cao, G Wen, Z Jia, J Yang, W Li, OR Zaiane
           </div>
           <div class="pub-venue">
-            International Conference on Database Systems for Advanced Applications, 2025
+            DASFAA 2025 - International Conference on Database Systems for Advanced Applications, 2025
           </div>
           <div class="pub-links">
             <a href="https://dasfaa2025.github.io/paper/research/research_431_paper.pdf/">Paper</a> 
@@ -301,7 +301,7 @@
             L Liu, G Wen, P Cao, J Yang, W Li, OR Zaiane
           </div>
           <div class="pub-venue">
-            Proceedings of the 17th ACM International Conference on Web Search and Data Mining
+            WSDM 2024 - Proceedings of the 17th ACM International Conference on Web Search and Data Mining
           </div>
           <div class="pub-links">
             <a href="https://dl.acm.org/doi/abs/10.1145/3616855.3635765">Paper</a> 
