--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div>
           <h1 class="name">LIU Lingwen</h1>
           <p class="affil">
-            PhD Student, Waseda University
+            PhD Student | Researcher | Waseda University
           </p>
           <p class="bio">
             I am currently a Ph.D. student at Waseda University.
