Update title from 'LLW-WU' to 'LiuLW'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>LLW-WU | Academic Homepage</title>
+  <title>LiuLW | Homepage</title>
   <meta name="description" content="Academic homepage." />
 
   <style>
