Fix link to research paper in index.html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             DASFAA 2025 - International Conference on Database Systems for Advanced Applications, 2025
           </div>
           <div class="pub-links">
-            <a href="https://dasfaa2025.github.io/paper/research/research_431_paper.pdf/">Paper</a> 
+            <a href="https://dasfaa2025.github.io/paper/research/research_431_paper.pdf">Paper</a> 
             <!-- <span>|</span>
             <a href="#">Supplement</a> <span>|</span>
             <a href="#">BibTeX</a> -->
