--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <section id="home">
       <div class="hero">
         <!-- Optional: replace with your photo file, or delete this img tag -->
-        <img class="avatar" src="selfphoto.jpg" alt="Your photo" />
+        <img class="avatar" src="selfphoto2.jpg" alt="Your photo" />
 
         <div>
           <h1 class="name">LIU Lingwen</h1>
